git pull orgin dev4

--- a/SoftwareEngineering/数字电路/1.md
+++ b/SoftwareEngineering/数字电路/1.md
@@ -1,4 +1,4 @@
-数字电路
+2e数字电路
 
 ## 一、单选题（难度0.4， 每题2分）
 
@@ -92,7 +92,7 @@ A 逻辑乘
 C 逻辑反
 D 以上说法都不对
 
-010 非逻辑运算
+### 010 非逻辑运算
 实现非逻辑运算的单元电路为 D
 
 A 转换器
@@ -100,7 +100,7 @@ B 比较器
 C 发生器
 **D 反相器**
 
-011 正逻辑与负逻辑
+### 011 正逻辑与负逻辑
 门电路输入输出高低电平赋值为（ ）为正逻辑 D
 
 A 0
@@ -116,7 +116,7 @@ B “或”门
 C “非”门
 **D “与或”门**
 
-013 逻辑函数
+### 013 逻辑函数
 用卡诺图化简时,若对每个方格群尽可能选大，则在最简表达式中B
 
 A 与项的个数少
@@ -129,7 +129,7 @@ D 结果不唯一
 
 A 结构简单
 B 成本低
-**C 作输出时发生电平漂移**
+**C 作输出时发生电平漂63移**
 D 输入电流过大
 
 015 二极管或门电路
@@ -1385,11 +1385,11 @@ ___。
 215 逻辑函数
 用等号将___和___连接组成的称为逻辑函数。 x
 
-逻辑变量，逻辑表达式
+### 逻辑变量，逻辑表达式
 216 逻辑函数的基本规则
 两个___的最小项可以合并成一个与项，并消去一个因子。  x
 
-逻辑相邻
+### 逻辑相邻
 217 分立元件门电路
 分立元件门电路是用___和___构成的门电路。  x
 
@@ -1397,12 +1397,12 @@ ___。
 218 二极管与门电路
 门电路中的二极管和三极管经常工作在___状态。 x
 
-开关
+### 开关
 219 三极管非门电路
 三极管输入特性曲线可分为三个区域: x
 ___，___，___。
 
-放大区，饱和区，截止区
+### 放大区，饱和区，截止区
 220 三极管非门电路
 TTL三态门的输出有三种状态:
 高电平、低电平和___状态。  x
@@ -1439,11 +1439,11 @@ TTL三态门的输出有三种状态:
 228 竞争的概念
 竞争的结果若导致冒险发生，并造成错误的后果，则称这种竞争为___；竞争的结果不导致冒险发生，或虽有冒险发生，但不影响系统的工作，则称这种竞争为___。 x
 
-临界竞争，非临界竞争
+### 临界竞争，非临界竞争
 229 触发器的功能
 触发器的功能是能够存储___的基本单元电路。 x
 
-一位二进制信号
+### 一位二进制信号
 230 基本RS触发器
 由两个与非门组成的基本RS触发器，其约束方称为:
 ___。 x
@@ -1452,19 +1452,19 @@ RS=0
 231 同步触发器
 同步触发器在CP为1期间出现的多次翻转现象称为___。 x
 
-空翻
+### 空翻
 232 触发器的结构
 触发器的触发方式有___，___，___。 x
 
-电平，脉冲，边沿
+### 电平，脉冲，边沿
 233 时序逻辑电路的分类
 所有存储电路中存储单元状态的变化都是在同一时钟信号操作下同时发生的为___。 x
 
-同步时序电路
+### 同步时序电路
 234 同步时序电路定义
 时序逻辑电路的特点是时序电路某一时刻的输出不仅取决于该时刻___的状态，还与___有关。 x
 
-输入信号，电路原状态
+### 输入信号，电路原状态
 235 寄存器
 存放数码的器件，必须具备___和___的功能。 x
 
@@ -1472,11 +1472,11 @@ RS=0
 236 时序逻辑电路
 时序逻辑电路可以由___，___，___全面描述。 x
 
-状态方程，驱动方程，输出方程
+### 状态方程，驱动方程，输出方程
 237 计数器
 计数器是由若干个触发器构成的一种___，它按预定的顺序改变其内部各触发器的状态，以表征输入的___。x
 
-时序电路，脉冲个数
+### 时序电路，脉冲个数
 238 计数器
 假定有2进制计数器，要得到8进制计数器，可采用___或___将一个2计数器和4计数器连接起来，形成M进制计数器。 x
 
@@ -1484,11 +1484,11 @@ RS=0
 239 时序电路的分析
 时序电路的自启动是指若由于某种原因使该电路处于___时，在CP脉冲作用下会自行转入___，并开始有效循环的工作方式。 x
 
-无效状态，有效状态
+### 无效状态，有效状态
 240 555单稳态触发器
 由于单稳态触发器电路因触发后能够保持一段暂稳状态，所以这种电路具有___。x
 
-记忆功能
+### 记忆功能
 241 555定时器
 在石英晶体自激多谐振荡器电路，振荡器的振荡频率只与石英晶体本身的参数___，与电路中的ＲＣ元件参数___。 x  
 
@@ -1496,11 +1496,11 @@ RS=0
 242 555多谐振荡器
 多谐振荡器电路又称为无稳态电路，或是自激多谐振荡器电路，这是因为这种电路工作在振荡状态，这是一种___产生电路。 x
 
-矩形脉冲信号
+### 矩形脉冲信号
 243 555施密特触发器
 施密特触发器在电路状态转换时，通过电路内部的___使输出电压波形的边沿变得很陡。 x
 
-正反馈过程
+### 正反馈过程
 244 555施密特触发器
 施密特触发器和单稳态触发器是一种脉冲___电路。
 多谐振荡器是一种脉冲___电路。 x
@@ -1526,16 +1526,18 @@ TTL与非门， 反相器， RC积分电路 x
 
 
 ## 二、简答（难度0.8 每5分）
-254 逻辑函数的基本规则
+### 254 逻辑函数的基本规则
 题目: 简述逻辑代数中求反函数的“反演规则”。x
+
 ```
 答案: 
 1. 将逻辑表达式中“原变量”换成“反变量”， “反变量” 换成“原变量”；
 2. +”换成“ · ”，“·”换成“+”；
 3. 常量“1”换成“0”， 常量“0”换成“1”。
 ```
-248 数字电路的特点
+### 248 数字电路的特点
 题目: 数字电路的特点是什么？x
+
 ```
 答案: 数字电路是处理数字信号的电路，而数字信号表示的是数字量。数字量在时间上和数量上都是离散的物理量。
 ```
@@ -1568,7 +1570,7 @@ TTL与非门， 反相器， RC积分电路 x
 答案: 用等号将一 逻辑变量 和 逻辑表达式 连接组成一逻辑函数。
 逻辑函数有四种表示法：函数式，真值表，逻辑图，卡诺图。
 ```
-255 逻辑函数的基本规则
+### 255 逻辑函数的基本规则
 题目: 简述 “与”逻辑，“或”逻辑 和 “非”逻辑。x
 
 ```
@@ -1627,6 +1629,7 @@ TTL与非门， 反相器， RC积分电路 x
 答案: 高电平、低电平和高阻状态。x
 ```
 268 题目: 简述TTL门电路中各晶体管的作用。x
+
 ```
 答案: 二极管在TTL门电路中作开关使用三极管在TTL门电路中作开关使用。
 ```
@@ -1721,16 +1724,19 @@ TTL与非门， 反相器， RC积分电路 x
 ```
 283 触发器的功能转化
 题目: RS，JK，T 三种触发器逻辑功能的关系为？x
+
 ```
 答案: 将RS，JK，T 三种触发器的特性比较可发现，其中JK触发器的逻辑功能最强，它包含了RS，T触发器的所有功能，需要RS触发器时，只需要将JK当作RS端使用即可，而将JK端连在一起就构成了T触发器。
 ```
-284 触发器
+### 284 触发器
 题目: 什么是触发器？其特点是什么？ x
+
 ```
 答案: 触发器能够存储一位二进制信号的基本单元电路。
 特点：具有两个能自行保持的稳定状态，用来表示逻辑状态的0和1，或二进制数的1和0根据不同的输入信号可以置0或1在输入信号消失后，能将获得的新状态保存下来。
 ```
 285题目: 简述基本RS触发器的动作特点。 x
+
 ```
 答案:  输入信号在S或R为高电平的时间内，都能直接改变输出端的状态（因为输入端的信号直接加到了输出门上），因此也称基本RS触发器为直接置（复）位触发器。
 ```
@@ -1738,13 +1744,15 @@ TTL与非门， 反相器， RC积分电路 x
 ```
 答案: 翻转分两步：在CP＝1时，主触发器接收输入信号S，R或J，K，置成相应的状态，从触发器输出端状态不变；CP下降沿到来，从触发器按照主触发器的状态翻转。CP＝1的全部时间里，输入信号都将对主触发器起控制作用。且JK触发器主触发器若翻转，则只可能翻转一次。
 ```
-289 时序逻辑电路的设计方法
+### 289 时序逻辑电路的设计方法
 题目: 简述任意进制计数器的构成方法。 x
+
 ```
 答案: N进制计数器是指计数器的状态每经N个 计数脉冲循环一次 ，即输入N个 计数脉冲， 计数器 给出一个（进位）输出脉冲。故可作为分频比为N的分频器使用。若N值为２ｎ，则N进制计数器可由二进制计数器级联构成。 非２ｎ进制计数器不能由二进制计数器简单地级联构成。
 ```
-290 竞争
+### 290 竞争
 题目: 简述 时序逻辑电路 中的竞争-冒险现象。 x
+
 ```
 答案: 因为时序电路中包含 组合电路 和 存储电路 两部分，所以竞争-冒险现象也包含两个方面。在 同步时序电路 中，由于所有触发器都在同一个时钟操作下动作，而在此之前每个触发器的输入信号均已经处于稳定状态，因而可以认为不存在竞争-冒险现象。一般认为竞争-毛象现象只存在于 异步时序逻辑电路 中。
 ```
@@ -1769,13 +1777,15 @@ TTL与非门， 反相器， RC积分电路 x
 ```
 答案: 把对时序电路的一般文字描述变成电 路的输入、输出 及 状态关系的图形 说明而形成的状态图，原始状态图可能包含多余的状态。在正确的原始状态图中 状态个数 不能少，状态之间的 转移关系 不能错。
 ```
-295 逻辑函数
+### 295 逻辑函数
 题目: 将逻辑函数L化简成最简与-或表达式: L（A，B，C，D）=∑m（0，2，5，7，8，13，15）+∑d（10）x
+
 ```
 答案: L=BD+非B乘非D
 ```
-296 同步时序逻辑电路的分析
+### 296 同步时序逻辑电路的分析
 题目: 同步时序逻辑电路的 分析的目的 和 方法 是什么？x
+
 ```
 答案: 目的：根据其逻辑图分析出该 电路实现的功能。
 分析方法：1、根据电路图写出 驱动方程；2、根据驱动方程和触发器特性，写出 状态方程；3、写出电路的 输出方程。
@@ -1787,7 +1797,7 @@ TTL与非门， 反相器， RC积分电路 x
 答案: 同步时序网络有统一的 时钟脉冲，只有在时钟脉冲到来时，电路的状态才发生改变，而且每一个时钟脉冲只能使电路的状态 改变一次。 
 异步时序网络没有统一的 时钟脉冲，电路状态的改变是由输入的变化直接引起的，而且每次输入变化可能使电路状态 改变多次。
 ```
-298 单稳态触发器 
+### 298 单稳态触发器 
 题目: 简述 单稳态触发器 具有的特点。x
 
 ```
@@ -1796,7 +1806,7 @@ TTL与非门， 反相器， RC积分电路 x
 第三、暂稳态维持时间的长短取决于电路本身的参数，与触发脉冲的宽度和幅度无关。单稳态触发器广泛应用于 脉冲整形，延时，以及定时等。
 ```
 
-299 脉冲整形电路
+### 299 脉冲整形电路
 题目: 获得矩形脉冲波形的两种方法是什么？ x
 
 ```
