--- a/SoftwareEngineering/Android系统应用开发/作业/4.md
+++ b/SoftwareEngineering/Android系统应用开发/作业/4.md
@@ -6,7 +6,7 @@ B、只有第一个被添加的按钮被显示
 C、三个按钮纵向排列显示
 D、三个按钮横向排列显示
 答案：D
-第2题 为了使android适应不同分辨率的机型，布局时字体单位应用（ ）。
+第2题 为了使android适应不同分辨率的机型，布局时字体单位应用（sp ）。
 A、dp
 B、dip 像素
 C、px
@@ -94,27 +94,27 @@ D、RotateAnimation
 A、Toast是一个信息提示工具
 B、Toast显示信息的时间可以设置为长时间或短时间
 C、Toast在窗口中显示时可以通过代码调整在任意位置显示
-D、Toast显示信息时不能添加图片
+~~D、Toast显示信息时不能添加图片~~
 答案：D
-第17题 以下哪个AnimationDrawable的父类？（ ）
+第17题 以下哪个AnimationDrawable的父类？（Drawable ）
 A、FrameAniamtion
 B、Drawable
 C、Animation
 D、AlphaAnimation
 答案：B
-第18题 以下哪个是加速插入器？（ ）
+第18题 以下哪个是加速插入器？（accelerate_interpolator ）
 A、anticipate_overshoot_interpolator
 B、accelerate_interpolator
 C、anticipate_interpolator
 D、linear_interpolator
 答案：B
-第19题 在Frame动画中，我们将xml文件放在哪个文件夹下？（ ）
+第19题 在Frame动画中，我们将xml文件放在哪个文件夹下？（ drawable）
 A、layout
 B、drawable
 C、value
 D、anim
 答案：B
-第20题 帧动画使用的类是（ ）。
+第20题 帧动画使用的类是（AnimationDrawable ）。
 A、Aniamtion
 B、AnimationDrawable
 C、DrawableAnimation
