1214 操作系统 汇编与接口技术

--- a/DataBase/Redis/教程/精简版.md
+++ b/DataBase/Redis/教程/精简版.md
@@ -1,1 +1,77 @@
-# Redis 教程
+## Redis 教程
+linux
+
+```
+./redis-cli 
+```
+
+
+
+window
+
+```
+redis-cli.exe -h 127.0.0.1 -p 6379
+```
+
+##  Redis 配置
+
+
+
+## 数据类型
+
+string（字符串） SET key value  | GET key | GETRANGE key start end |
+
+hash（哈希） HMSET key 0 value |  HGET  key 0 | HDEL key field1 [field2] | 
+
+list（列表）lpush key value |  lrange key 0 10 | BLPOP key1 [key2 ] timeout | BRPOP key1 [key2 ] timeout
+
+set（集合）sadd  key value | smembers key | SCARD key | 
+
+SDIFF key1 [key2]    |  SDIFFSTORE destination key1 [key2] | 	
+
+SINTER key1 [key2]  |  SINTERSTORE destination key1 [key2]
+
+zset(sorted set：有序集合) zadd key 0 value |  ZRANGEBYSCORE key 0 1000 | ZCARD key
+
+ZCOUNT key min max | 
+
+## Redis 命令
+
+del name | ping  | exists name | dump key | expire | expireat | pexpireat |
+
+ttl | type | rename key | pttl key |
+
+select 1 (支持16个数据库)
+
+SAVE | CONFIG GET dir | BGSAVE
+
+## Redis 事务
+
+```
+redis 127.0.0.1:7000> multi
+OK
+redis 127.0.0.1:7000> set a aaa
+QUEUED
+redis 127.0.0.1:7000> set b bbb
+QUEUED
+redis 127.0.0.1:7000> set c ccc
+QUEUED
+redis 127.0.0.1:7000> exec
+1) OK
+2) OK
+3) OK
+```
+
+| 序号 | 命令及描述                                                   |
+| :--- | :----------------------------------------------------------- |
+| 1    | [DISCARD](https://www.runoob.com/redis/transactions-discard.html) 取消事务，放弃执行事务块内的所有命令。 |
+| 2    | [EXEC](https://www.runoob.com/redis/transactions-exec.html) 执行所有事务块内的命令。 |
+| 3    | [MULTI](https://www.runoob.com/redis/transactions-multi.html) 标记一个事务块的开始。 |
+| 4    | [UNWATCH](https://www.runoob.com/redis/transactions-unwatch.html) 取消 WATCH 命令对所有 key 的监视。 |
+| 5    | [WATCH key [key ...\]](https://www.runoob.com/redis/transactions-watch.html) 监视一个(或多个) key ，如果在事务执行之前这个(或这些) key 被其他命令所改动，那么事务将被打断。 |
+
+## 管道技术
+
+
+
+##  Redis 高级教程
